Update ThreadBench.java